# power-system-simulation-LambdaOne

./: Power_Grid_Calculation_Module.ipynb  find_batch_defs.py  power_grid_calculation_module.py  pyproject.toml
.github/workflows/: build-and-test.yml
example/: executed_notebook.ipynb
power-system-simulation-LambdaOne-second/python_cov_html/: class_index.html  function_index.html  index.html  status.json  z_6bc52671be7e3921___init___py.html  z_6bc52671be7e3921_simple_function_py.html
power-system-simulation-LambdaOne-second/src/: grid_calculator.py
power-system-simulation-LambdaOne-second/src/power_system_simulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
power-system-simulation-LambdaOne-second/tests/: test_power_grid_calculation_module.py  test_simple_function.py
src/: assignment3_main.py
src/power_grid_model/: utils.py
src/power_grid_model/_core/: buffer_handling.py  data_handling.py  data_types.py  error_handling.py  power_grid_dataset.py  power_grid_meta.py  power_grid_model.py  serialization.py  typing.py  utils.py
src/power_grid_model/validation/: __init__.py  _rules.py  _validation.py  assertions.py  errors.py  utils.py
src/power_system_simulation/: assignment3_main.py  graph_processing.py  power_grid.py  power_grid_calculation_model.py  power_grid_calculation_module.py
tests/: test_graph.py  test_power_grid.py  test_power_grid_calculation_module.py
