[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power-system-simulation"
authors = [{name = "TU/e EES group"}]
description = "Student project for power system simulation"
readme = "README.md"
license = {text = "BSD License (BSD)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = ">=3.12"
dependencies = [
  "power_grid_model"
]
version = "0.1"

[project.optional-dependencies]
dev = [
  'pytest',
  'black',
  'isort',
  'pylint',
  'pytest-cov',
  'networkx',
  'black[jupyter]',
  'pandas'
]

example = [
  'jupyter'
]

[tool.pylint."DESIGN"]
max-attributes = 8
max-args = 6
max-positional-arguments = 6

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false 

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=power_system_simulation", "--cov-report", "term", "--cov-report", "html:python_cov_html", "--cov-fail-under=95"]

[tool.black]
line-length = 100  # Adjusted for better readability

[tool.isort]
profile = "black"
combine_as_imports = true
line-length = 100  # Adjusted for better readability

[tool.pylint.main]
fail-under = 10
max-line-length = 120  # Adjusted for better readability
py-version = "3.12"
max-locals = 30  # Optional: increased the max locals to avoid pylint error
